--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
 <style>
+#axe {
+	position:relative;
+}
+#axe:before {
+	content: url(img/axe.png);
+	position: absolute;
+	top: 0;
+	left: 0;
+	opacity: .1;
+	z-index: -1;
+}
 @media (min-width: 768px) {
   .container {
     max-width: 730px;
@@ -21,7 +32,7 @@
 </style>
 </head>
 <body>
-
+<div id="axe"></div>
 <div class="container">
 	<div class="header">
         <ul class="nav nav-pills pull-right">
