styles and fonts

--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Axe / Not Axe</title>
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" type="text/css">
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css" type="text/css">
+	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Metamorphous|Vollkorn:400,400italic,700,700italic" type="text/css">
 <style>
+body, code {
+	font-family: 'Vollkorn', serif !important;
+	font-size: 16px;
+}
 #axe {
 	position:relative;
 }
@@ -28,6 +33,9 @@
 	padding-top: 19px;
 	color: #777;
 	border-top: 1px solid #e5e5e5;
+}
+h1, h2, h3, h4, h5, h6 {
+	font-family: 'Metamorphous', cursive;
 }
 </style>
 </head>
