--- a/personnage.html
+++ b/personnage.html
@@ -120,10 +120,10 @@ h1, h2, h3, h4, h5, h6 {
                 <h3>Ta hache est</h3>
                 <p class="text-muted text-left">(choisis-en deux)</p>
                 <ul class=list-unstyled>
-                    <li><input type="checkbox"> <strong>Acérée: </strong> +1 dommages
+                    <li><input type="checkbox"> <strong>Acérée: </strong> +1 dégât
                     <li><input type="checkbox"> <strong>Légère :</strong> Donne un bonus de +1 aux mouvements <em>Hache</em> ou <em>Pas Hache</em> qui auraient dû avoir un malus dû à la classe d'armure
                     <li><input type="checkbox"> <strong>Célèbre :</strong> Donne un bonus de +1 quand tu veux influencer un autre Nain qui connaît l'histoire de ta hache
-                    <li><input type="checkbox"> <strong>Tueuse :</strong> +2 dommages quand elle frappe ta Nemesis
+                    <li><input type="checkbox"> <strong>Tueuse :</strong> +2 dégâts quand elle frappe ta Nemesis
                     <li><input type="checkbox"> <strong>Enchantée :</strong> Brille quand ta Nemesis approche
                     <li><input type="checkbox"> <strong>Virevoltante :</strong> Une fois par scène de combat, autorise à faire une double attaque (attaquer deux ennemis à la fois)
                 </ul>
